Connect VM agent metric collectors to backend (#30)
- Have metric collector actors (VMAgent) actually send data to backend
- Add makefile command to launch controlplane + one agent
- Change some metric backend types to work better with OpenAPI generated
SDKs
- Remove slow codegen from pre-commit
- Add rapidui pages for each metric stream
- Split disk throughput and iops fake data generation configs so that
they don't need to share a value.
- Fix disk usage fake data generation
- Add tests for all metrics
